--- a/package.json
+++ b/package.json
@@ -11,21 +11,28 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.3.1",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.54.0",
+    "@tanstack/react-query": "^4.29.11",
+    "axios": "^1.6.1",
     "daisyui": "^2.51.6",
-    "firebase": "^9.22.0",
+    "firebase": "^9.23.0",
+    "jsonwebtoken": "^9.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
-    "react-hook-form": "^7.43.9",
+    "react-hook-form": "^7.48.2",
+    "react-icons": "^4.8.0",
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
     "react-simple-captcha": "^9.0.2",
     "react-tabs": "^6.0.1",
+    "recharts": "^2.7.2",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.7.5",
+    "sweetalert2": "^11.9.0",
     "swiper": "^9.3.2"
   },
   "devDependencies": {
@@ -39,6 +46,6 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
-    "vite": "^4.3.2"
+    "vite": "^4.3.8"
   }
 }
